--- a/pages/index.html
+++ b/pages/index.html
@@ -7,10 +7,7 @@
     <title>Prueba Git</title>
 </head>
 <body>
-    <h1>Prueba git</h1>
-
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <h1>Prueba git</h1>    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
